GLSLCompiler/glslang/MachineIndependent.output
State 367 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 variable_identifier: IDENTIFIER

    2 primary_expression: variable_identifier
    3                   | INTCONSTANT
    4                   | UINTCONSTANT
    5                   | FLOATCONSTANT
    6                   | BOOLCONSTANT
    7                   | LEFT_PAREN expression RIGHT_PAREN

    8 postfix_expression: primary_expression
    9                   | postfix_expression LEFT_BRACKET integer_expression RIGHT_BRACKET
   10                   | function_call
   11                   | postfix_expression DOT FIELD_SELECTION
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP

   14 integer_expression: expression

   15 function_call: function_call_or_method

   16 function_call_or_method: function_call_generic
   17                        | postfix_expression DOT function_call_generic

   18 function_call_generic: function_call_header_with_parameters RIGHT_PAREN
   19                      | function_call_header_no_parameters RIGHT_PAREN

   20 function_call_header_no_parameters: function_call_header VOID_TYPE
   21                                   | function_call_header

   22 function_call_header_with_parameters: function_call_header assignment_expression
   23                                     | function_call_header_with_parameters COMMA assignment_expression

   24 function_call_header: function_identifier LEFT_PAREN

   25 function_identifier: type_specifier
   26                    | IDENTIFIER
   27                    | FIELD_SELECTION

   28 unary_expression: postfix_expression
   29                 | INC_OP unary_expression
   30                 | DEC_OP unary_expression
   31                 | unary_operator unary_expression

   32 unary_operator: PLUS
   33               | DASH
   34               | BANG
   35               | TILDE

   36 multiplicative_expression: unary_expression
   37                          | multiplicative_expression STAR unary_expression
   38                          | multiplicative_expression SLASH unary_expression
   39                          | multiplicative_expression PERCENT unary_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression PLUS multiplicative_expression
   42                    | additive_expression DASH multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_OP additive_expression
   45                 | shift_expression RIGHT_OP additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression LEFT_ANGLE shift_expression
   48                      | relational_expression RIGHT_ANGLE shift_expression
   49                      | relational_expression LE_OP shift_expression
   50                      | relational_expression GE_OP shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQ_OP relational_expression
   53                    | equality_expression NE_OP relational_expression

   54 and_expression: equality_expression
   55               | and_expression AMPERSAND equality_expression

   56 exclusive_or_expression: and_expression
   57                        | exclusive_or_expression CARET and_expression

   58 inclusive_or_expression: exclusive_or_expression
   59                        | inclusive_or_expression VERTICAL_BAR exclusive_or_expression

   60 logical_and_expression: inclusive_or_expression
   61                       | logical_and_expression AND_OP inclusive_or_expression

   62 logical_xor_expression: logical_and_expression
   63                       | logical_xor_expression XOR_OP logical_and_expression

   64 logical_or_expression: logical_xor_expression
   65                      | logical_or_expression OR_OP logical_xor_expression

   66 conditional_expression: logical_or_expression
   67                       | logical_or_expression QUESTION expression COLON assignment_expression

   68 assignment_expression: conditional_expression
   69                      | unary_expression assignment_operator assignment_expression

   70 assignment_operator: EQUAL
   71                    | MUL_ASSIGN
   72                    | DIV_ASSIGN
   73                    | MOD_ASSIGN
   74                    | ADD_ASSIGN
   75                    | SUB_ASSIGN
   76                    | LEFT_ASSIGN
   77                    | RIGHT_ASSIGN
   78                    | AND_ASSIGN
   79                    | XOR_ASSIGN
   80                    | OR_ASSIGN

   81 expression: assignment_expression
   82           | expression COMMA assignment_expression

   83 constant_expression: conditional_expression

   84 declaration: function_prototype SEMICOLON
   85            | init_declarator_list SEMICOLON

   86 function_prototype: function_declarator RIGHT_PAREN

   87 function_declarator: function_header
   88                    | function_header_with_parameters

   89 function_header_with_parameters: function_header parameter_declaration
   90                                | function_header_with_parameters COMMA parameter_declaration

   91 function_header: fully_specified_type IDENTIFIER LEFT_PAREN

   92 parameter_declarator: type_specifier IDENTIFIER
   93                     | type_specifier IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET

   94 parameter_declaration: type_qualifier parameter_qualifier parameter_declarator
   95                      | parameter_qualifier parameter_declarator
   96                      | type_qualifier parameter_qualifier parameter_type_specifier
   97                      | parameter_qualifier parameter_type_specifier

   98 parameter_qualifier: /* empty */
   99                    | IN_QUAL
  100                    | OUT_QUAL
  101                    | INOUT_QUAL

  102 parameter_type_specifier: type_specifier

  103 array_declarator_suffix: LEFT_BRACKET RIGHT_BRACKET
  104                        | LEFT_BRACKET constant_expression RIGHT_BRACKET
  105                        | LEFT_BRACKET RIGHT_BRACKET array_declarator_suffix
  106                        | LEFT_BRACKET constant_expression RIGHT_BRACKET array_declarator_suffix

  107 init_declarator_list: single_declaration
  108                     | init_declarator_list COMMA IDENTIFIER
  109                     | init_declarator_list COMMA IDENTIFIER array_declarator_suffix
  110                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET RIGHT_BRACKET EQUAL initializer
  111                     | init_declarator_list COMMA IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET EQUAL initializer
  112                     | init_declarator_list COMMA IDENTIFIER EQUAL initializer

  113 single_declaration: fully_specified_type
  114                   | fully_specified_type IDENTIFIER
  115                   | fully_specified_type IDENTIFIER array_declarator_suffix
  116                   | fully_specified_type IDENTIFIER LEFT_BRACKET RIGHT_BRACKET EQUAL initializer
  117                   | fully_specified_type IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET EQUAL initializer
  118                   | fully_specified_type IDENTIFIER EQUAL initializer
  119                   | INVARIANT IDENTIFIER

  120 fully_specified_type: type_specifier
  121                     | type_qualifier varying_geom_modifyer type_specifier

  122 varying_geom_modifyer: /* empty */
  123                      | IN_QUAL
  124                      | OUT_QUAL

  125 type_qualifier: CONST_QUAL
  126               | ATTRIBUTE
  127               | varying_modifier VARYING
  128               | VARYING
  129               | UNIFORM

  130 varying_modifier: INVARIANT
  131                 | CENTROID
  132                 | FLAT
  133                 | NOPERSPECTIVE
  134                 | varying_modifier INVARIANT
  135                 | varying_modifier CENTROID
  136                 | varying_modifier FLAT
  137                 | varying_modifier NOPERSPECTIVE

  138 type_specifier: type_specifier_nonarray
  139               | type_specifier_nonarray LEFT_BRACKET RIGHT_BRACKET
  140               | type_specifier_nonarray LEFT_BRACKET constant_expression RIGHT_BRACKET

  141 type_specifier_nonarray: VOID_TYPE
  142                        | FLOAT_TYPE
  143                        | INT_TYPE
  144                        | BOOL_TYPE
  145                        | UNSIGNED INT_TYPE
  146                        | VEC2
  147                        | VEC3
  148                        | VEC4
  149                        | BVEC2
  150                        | BVEC3
  151                        | BVEC4
  152                        | IVEC2
  153                        | IVEC3
  154                        | IVEC4
  155                        | UVEC2
  156                        | UVEC3
  157                        | UVEC4
  158                        | MATRIX2
  159                        | MATRIX3
  160                        | MATRIX4
  161                        | MATRIX2X2
  162                        | MATRIX2X3
  163                        | MATRIX2X4
  164                        | MATRIX3X2
  165                        | MATRIX3X3
  166                        | MATRIX3X4
  167                        | MATRIX4X2
  168                        | MATRIX4X3
  169                        | MATRIX4X4
  170                        | SAMPLER1D
  171                        | ISAMPLER1D
  172                        | USAMPLER1D
  173                        | SAMPLER2D
  174                        | ISAMPLER2D
  175                        | USAMPLER2D
  176                        | SAMPLER3D
  177                        | ISAMPLER3D
  178                        | USAMPLER3D
  179                        | SAMPLERCUBE
  180                        | ISAMPLERCUBE
  181                        | USAMPLERCUBE
  182                        | SAMPLER1DSHADOW
  183                        | SAMPLER2DSHADOW
  184                        | SAMPLER2DRECTARB
  185                        | ISAMPLER2DRECT
  186                        | USAMPLER2DRECT
  187                        | SAMPLER2DRECTSHADOWARB
  188                        | SAMPLER1DARRAY
  189                        | ISAMPLER1DARRAY
  190                        | USAMPLER1DARRAY
  191                        | SAMPLER2DARRAY
  192                        | ISAMPLER2DARRAY
  193                        | USAMPLER2DARRAY
  194                        | SAMPLERBUFFER
  195                        | ISAMPLERBUFFER
  196                        | USAMPLERBUFFER
  197                        | SAMPLER1DARRAYSHADOW
  198                        | SAMPLER2DARRAYSHADOW
  199                        | SAMPLERCUBESHADOW
  200                        | struct_specifier
  201                        | TYPE_NAME

  202 struct_specifier: STRUCT IDENTIFIER LEFT_BRACE struct_declaration_list RIGHT_BRACE
  203                 | STRUCT LEFT_BRACE struct_declaration_list RIGHT_BRACE

  204 struct_declaration_list: struct_declaration
  205                        | struct_declaration_list struct_declaration

  206 struct_declaration: type_specifier struct_declarator_list SEMICOLON

  207 struct_declarator_list: struct_declarator
  208                       | struct_declarator_list COMMA struct_declarator

  209 struct_declarator: IDENTIFIER
  210                  | IDENTIFIER LEFT_BRACKET constant_expression RIGHT_BRACKET

  211 initializer: assignment_expression

  212 declaration_statement: declaration

  213 statement: compound_statement
  214          | simple_statement

  215 simple_statement: declaration_statement
  216                 | expression_statement
  217                 | selection_statement
  218                 | switch_statement
  219                 | case_label
  220                 | iteration_statement
  221                 | jump_statement

  222 compound_statement: LEFT_BRACE RIGHT_BRACE

  223 $@1: /* empty */

  224 $@2: /* empty */

  225 compound_statement: LEFT_BRACE $@1 statement_list $@2 RIGHT_BRACE

  226 statement_no_new_scope: compound_statement_no_new_scope
  227                       | simple_statement

  228 compound_statement_no_new_scope: LEFT_BRACE RIGHT_BRACE
  229                                | LEFT_BRACE statement_list RIGHT_BRACE

  230 statement_list: statement
  231               | statement_list statement

  232 expression_statement: SEMICOLON
  233                     | expression SEMICOLON

  234 selection_statement: IF LEFT_PAREN expression RIGHT_PAREN selection_rest_statement

  235 selection_rest_statement: statement ELSE statement
  236                         | statement

  237 condition: expression
  238          | fully_specified_type IDENTIFIER EQUAL initializer

  239 $@3: /* empty */

  240 switch_statement: SWITCH LEFT_PAREN $@3 expression RIGHT_PAREN LEFT_BRACE switch_statement_list RIGHT_BRACE

  241 switch_statement_list: /* empty */
  242                      | statement_list

  243 case_label: CASE expression COLON
  244           | DEFAULT COLON

  245 $@4: /* empty */

  246 iteration_statement: WHILE LEFT_PAREN $@4 condition RIGHT_PAREN statement_no_new_scope

  247 $@5: /* empty */

  248 iteration_statement: DO $@5 statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON

  249 $@6: /* empty */

  250 iteration_statement: FOR LEFT_PAREN $@6 for_init_statement for_rest_statement RIGHT_PAREN statement_no_new_scope

  251 for_init_statement: expression_statement
  252                   | declaration_statement

  253 conditionopt: condition
  254             | /* empty */

  255 for_rest_statement: conditionopt SEMICOLON
  256                   | conditionopt SEMICOLON expression

  257 jump_statement: CONTINUE SEMICOLON
  258               | BREAK SEMICOLON
  259               | RETURN SEMICOLON
  260               | RETURN expression SEMICOLON
  261               | DISCARD SEMICOLON

  262 translation_unit: external_declaration
  263                 | translation_unit external_declaration

  264 external_declaration: function_definition
  265                     | declaration

  266 $@7: /* empty */

  267 function_definition: function_prototype $@7 compound_statement_no_new_scope


Terminals, with rules where they appear

$end (0) 0
error (256)
ATTRIBUTE (258) 126
CONST_QUAL (259) 125
BOOL_TYPE (260) 144
FLOAT_TYPE (261) 142
INT_TYPE (262) 143 145
INVARIANT (263) 119 130 134
BREAK (264) 258
CONTINUE (265) 257
DO (266) 248
ELSE (267) 235
FOR (268) 250
IF (269) 234
DISCARD (270) 261
RETURN (271) 259 260
SWITCH (272) 240
CASE (273) 243
DEFAULT (274) 244
BVEC2 (275) 149
BVEC3 (276) 150
BVEC4 (277) 151
IVEC2 (278) 152
IVEC3 (279) 153
IVEC4 (280) 154
VEC2 (281) 146
VEC3 (282) 147
VEC4 (283) 148
MATRIX2 (284) 158
MATRIX3 (285) 159
MATRIX4 (286) 160
MATRIX2X2 (287) 161
MATRIX3X2 (288) 164
MATRIX4X2 (289) 167
MATRIX2X3 (290) 162
MATRIX3X3 (291) 165
MATRIX4X3 (292) 168
MATRIX2X4 (293) 163
MATRIX3X4 (294) 166
MATRIX4X4 (295) 169
IN_QUAL (296) 99 123
OUT_QUAL (297) 100 124
INOUT_QUAL (298) 101
UNIFORM (299) 129
VARYING (300) 127 128
STRUCT (301) 202 203
VOID_TYPE (302) 20 141
WHILE (303) 246 248
SAMPLER1D (304) 170
SAMPLER2D (305) 173
SAMPLER3D (306) 176
SAMPLERCUBE (307) 179
SAMPLER1DSHADOW (308) 182
SAMPLER2DSHADOW (309) 183
SAMPLER2DRECTARB (310) 184
SAMPLER2DRECTSHADOWARB (311) 187
IDENTIFIER (312) 1 26 91 92 93 108 109 110 111 112 114 115 116 117
    118 119 202 209 210 238
TYPE_NAME (313) 201
FLOATCONSTANT (314) 5
INTCONSTANT (315) 3
BOOLCONSTANT (316) 6
FIELD_SELECTION (317) 11 27
LEFT_OP (318) 44
RIGHT_OP (319) 45
INC_OP (320) 12 29
DEC_OP (321) 13 30
LE_OP (322) 49
GE_OP (323) 50
EQ_OP (324) 52
NE_OP (325) 53
AND_OP (326) 61
OR_OP (327) 65
XOR_OP (328) 63
MUL_ASSIGN (329) 71
DIV_ASSIGN (330) 72
ADD_ASSIGN (331) 74
MOD_ASSIGN (332) 73
LEFT_ASSIGN (333) 76
RIGHT_ASSIGN (334) 77
AND_ASSIGN (335) 78
XOR_ASSIGN (336) 79
OR_ASSIGN (337) 80
SUB_ASSIGN (338) 75
LEFT_PAREN (339) 7 24 91 234 240 246 248 250
RIGHT_PAREN (340) 7 18 19 86 234 240 246 248 250
LEFT_BRACKET (341) 9 93 103 104 105 106 110 111 116 117 139 140 210
RIGHT_BRACKET (342) 9 93 103 104 105 106 110 111 116 117 139 140 210
LEFT_BRACE (343) 202 203 222 225 228 229 240
RIGHT_BRACE (344) 202 203 222 225 228 229 240
DOT (345) 11 17
COMMA (346) 23 82 90 108 109 110 111 112 208
COLON (347) 67 243 244
EQUAL (348) 70 110 111 112 116 117 118 238
SEMICOLON (349) 84 85 206 232 233 248 255 256 257 258 259 260 261
BANG (350) 34
DASH (351) 33 42
TILDE (352) 35
PLUS (353) 32 41
STAR (354) 37
SLASH (355) 38
PERCENT (356) 39
LEFT_ANGLE (357) 47
RIGHT_ANGLE (358) 48
VERTICAL_BAR (359) 59
CARET (360) 57
AMPERSAND (361) 55
QUESTION (362) 67
UINTCONSTANT (363) 4
UNSIGNED (364) 145
NOPERSPECTIVE (365) 133 137
FLAT (366) 132 136
CENTROID (367) 131 135
UVEC2 (368) 155
UVEC3 (369) 156
UVEC4 (370) 157
SAMPLER1DARRAY (371) 188
SAMPLER2DARRAY (372) 191
SAMPLER1DARRAYSHADOW (373) 197
SAMPLER2DARRAYSHADOW (374) 198
SAMPLERCUBESHADOW (375) 199
ISAMPLER1D (376) 171
ISAMPLER2D (377) 174
ISAMPLER3D (378) 177
ISAMPLERCUBE (379) 180
ISAMPLER2DRECT (380) 185
ISAMPLER1DARRAY (381) 189
ISAMPLER2DARRAY (382) 192
USAMPLER1D (383) 172
USAMPLER2D (384) 175
USAMPLER3D (385) 178
USAMPLERCUBE (386) 181
USAMPLER2DRECT (387) 186
USAMPLER1DARRAY (388) 190
USAMPLER2DARRAY (389) 193
SAMPLERBUFFER (390) 194
ISAMPLERBUFFER (391) 195
USAMPLERBUFFER (392) 196


Nonterminals, with rules where they appear

$accept (138)
    on left: 0
variable_identifier (139)
    on left: 1, on right: 2
primary_expression (140)
    on left: 2 3 4 5 6 7, on right: 8
postfix_expression (141)
    on left: 8 9 10 11 12 13, on right: 9 11 12 13 17 28
integer_expression (142)
    on left: 14, on right: 9
function_call (143)
    on left: 15, on right: 10
function_call_or_method (144)
    on left: 16 17, on right: 15
function_call_generic (145)
    on left: 18 19, on right: 16 17
function_call_header_no_parameters (146)
    on left: 20 21, on right: 19
function_call_header_with_parameters (147)
    on left: 22 23, on right: 18 23
function_call_header (148)
    on left: 24, on right: 20 21 22
function_identifier (149)
    on left: 25 26 27, on right: 24
unary_expression (150)
    on left: 28 29 30 31, on right: 29 30 31 36 37 38 39 69
unary_operator (151)
    on left: 32 33 34 35, on right: 31
multiplicative_expression (152)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
additive_expression (153)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (154)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
relational_expression (155)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
equality_expression (156)
    on left: 51 52 53, on right: 52 53 54 55
and_expression (157)
    on left: 54 55, on right: 55 56 57
exclusive_or_expression (158)
    on left: 56 57, on right: 57 58 59
inclusive_or_expression (159)
    on left: 58 59, on right: 59 60 61
logical_and_expression (160)
    on left: 60 61, on right: 61 62 63
logical_xor_expression (161)
    on left: 62 63, on right: 63 64 65
logical_or_expression (162)
    on left: 64 65, on right: 65 66 67
conditional_expression (163)
    on left: 66 67, on right: 68 83
assignment_expression (164)
    on left: 68 69, on right: 22 23 67 69 81 82 211
assignment_operator (165)
    on left: 70 71 72 73 74 75 76 77 78 79 80, on right: 69
expression (166)
    on left: 81 82, on right: 7 14 67 82 233 234 237 240 243 248 256
    260
constant_expression (167)
    on left: 83, on right: 93 104 106 111 117 140 210
declaration (168)
    on left: 84 85, on right: 212 265
function_prototype (169)
    on left: 86, on right: 84 267
function_declarator (170)
    on left: 87 88, on right: 86
function_header_with_parameters (171)
    on left: 89 90, on right: 88 90
function_header (172)
    on left: 91, on right: 87 89
parameter_declarator (173)
    on left: 92 93, on right: 94 95
parameter_declaration (174)
    on left: 94 95 96 97, on right: 89 90
parameter_qualifier (175)
    on left: 98 99 100 101, on right: 94 95 96 97
parameter_type_specifier (176)
    on left: 102, on right: 96 97
array_declarator_suffix (177)
    on left: 103 104 105 106, on right: 105 106 109 115
init_declarator_list (178)
    on left: 107 108 109 110 111 112, on right: 85 108 109 110 111
    112
single_declaration (179)
    on left: 113 114 115 116 117 118 119, on right: 107
fully_specified_type (180)
    on left: 120 121, on right: 91 113 114 115 116 117 118 238
varying_geom_modifyer (181)
    on left: 122 123 124, on right: 121
type_qualifier (182)
    on left: 125 126 127 128 129, on right: 94 96 121
varying_modifier (183)
    on left: 130 131 132 133 134 135 136 137, on right: 127 134 135
    136 137
type_specifier (184)
    on left: 138 139 140, on right: 25 92 93 102 120 121 206
type_specifier_nonarray (185)
    on left: 141 142 143 144 145 146 147 148 149 150 151 152 153 154
    155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170
    171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186
    187 188 189 190 191 192 193 194 195 196 197 198 199 200 201, on right:
    138 139 140
struct_specifier (186)
    on left: 202 203, on right: 200
struct_declaration_list (187)
    on left: 204 205, on right: 202 203 205
struct_declaration (188)
    on left: 206, on right: 204 205
struct_declarator_list (189)
    on left: 207 208, on right: 206 208
struct_declarator (190)
    on left: 209 210, on right: 207 208
initializer (191)
    on left: 211, on right: 110 111 112 116 117 118 238
declaration_statement (192)
    on left: 212, on right: 215 252
statement (193)
    on left: 213 214, on right: 230 231 235 236 248
simple_statement (194)
    on left: 215 216 217 218 219 220 221, on right: 214 227
compound_statement (195)
    on left: 222 225, on right: 213
$@1 (196)
    on left: 223, on right: 225
$@2 (197)
    on left: 224, on right: 225
statement_no_new_scope (198)
    on left: 226 227, on right: 246 250
compound_statement_no_new_scope (199)
    on left: 228 229, on right: 226 267
statement_list (200)
    on left: 230 231, on right: 225 229 231 242
expression_statement (201)
    on left: 232 233, on right: 216 251
selection_statement (202)
    on left: 234, on right: 217
selection_rest_statement (203)
    on left: 235 236, on right: 234
condition (204)
    on left: 237 238, on right: 246 253
switch_statement (205)
    on left: 240, on right: 218
$@3 (206)
    on left: 239, on right: 240
switch_statement_list (207)
    on left: 241 242, on right: 240
case_label (208)
    on left: 243 244, on right: 219
iteration_statement (209)
    on left: 246 248 250, on right: 220
$@4 (210)
    on left: 245, on right: 246
$@5 (211)
    on left: 247, on right: 248
$@6 (212)
    on left: 249, on right: 250
for_init_statement (213)
    on left: 251 252, on right: 250
conditionopt (214)
    on left: 253 254, on right: 255 256
for_rest_statement (215)
    on left: 255 256, on right: 250
jump_statement (216)
    on left: 257 258 259 260 261, on right: 221
translation_unit (217)
    on left: 262 263, on right: 0 263
external_declaration (218)
    on left: 264 265, on right: 262 263
function_definition (219)
    on left: 267, on right: 264
$@7 (220)
    on left: 266, on right: 267


State 0

    0 $accept: . translation_unit $end

    ATTRIBUTE               shift, and go to state 1
    CONST_QUAL              shift, and go to state 2
    BOOL_TYPE               shift, and go to state 3
    FLOAT_TYPE              shift, and go to state 4
    INT_TYPE                shift, and go to state 5
    INVARIANT               shift, and go to state 6
    BVEC2                   shift, and go to state 7
    BVEC3                   shift, and go to state 8
    BVEC4                   shift, and go to state 9
    IVEC2                   shift, and go to state 10
    IVEC3                   shift, and go to state 11
    IVEC4                   shift, and go to state 12
    VEC2                    shift, and go to state 13
    VEC3                    shift, and go to state 14
    VEC4                    shift, and go to state 15
    MATRIX2                 shift, and go to state 16
    MATRIX3                 shift, and go to state 17
    MATRIX4                 shift, and go to state 18
    MATRIX2X2               shift, and go to state 19
    MATRIX3X2               shift, and go to state 20
    MATRIX4X2               shift, and go to state 21
    MATRIX2X3               shift, and go to state 22
    MATRIX3X3               shift, and go to state 23
    MATRIX4X3               shift, and go to state 24
    MATRIX2X4               shift, and go to state 25
    MATRIX3X4               shift, and go to state 26
    MATRIX4X4               shift, and go to state 27
    UNIFORM                 shift, and go to state 28
    VARYING                 shift, and go to state 29
    STRUCT                  shift, and go to state 30
    VOID_TYPE               shift, and go to state 31
    SAMPLER1D               shift, and go to state 32
    SAMPLER2D               shift, and go to state 33
    SAMPLER3D               shift, and go to state 34
    SAMPLERCUBE             shift, and go to state 35
    SAMPLER1DSHADOW         shift, and go to state 36
    SAMPLER2DSHADOW         shift, and go to state 37
    SAMPLER2DRECTARB        shift, and go to state 38
    SAMPLER2DRECTSHADOWARB  shift, and go to state 39
    TYPE_NAME               shift, and go to state 40
    UNSIGNED                shift, and go to state 41
    NOPERSPECTIVE           shift, and go to state 42
    FLAT                    shift, and go to state 43
    CENTROID                shift, and go to state 44
    UVEC2                   shift, and go to state 45
    UVEC3                   shift, and go to state 46
    UVEC4                   shift, and go to state 47
    SAMPLER1DARRAY          shift, and go to state 48
    SAMPLER2DARRAY          shift, and go to state 49
    SAMPLER1DARRAYSHADOW    shift, and go to state 50
    SAMPLER2DARRAYSHADOW    shift, and go to state 51
    SAMPLERCUBESHADOW       shift, and go to state 52
    ISAMPLER1D              shift, and go to state 53
    ISAMPLER2D              shift, and go to state 54
    ISAMPLER3D              shift, and go to state 55
    ISAMPLERCUBE            shift, and go to state 56
    ISAMPLER2DRECT          shift, and go to state 57
    ISAMPLER1DARRAY         shift, and go to state 58
    ISAMPLER2DARRAY         shift, and go to state 59
    USAMPLER1D              shift, and go to state 60
    USAMPLER2D              shift, and go to state 61
    USAMPLER3D              shift, and go to state 62
    USAMPLERCUBE            shift, and go to state 63
    USAMPLER2DRECT          shift, and go to state 64
    USAMPLER1DARRAY         shift, and go to state 65
    USAMPLER2DARRAY         shift, and go to state 66
    SAMPLERBUFFER           shift, and go to state 67
    ISAMPLERBUFFER          shift, and go to state 68
    USAMPLERBUFFER          shift, and go to state 69

    declaration                      go to state 70
    function_prototype               go to state 71
    function_declarator              go to state 72
    function_header_with_parameters  go to state 73
    function_header                  go to state 74
    init_declarator_list             go to state 75
    single_declaration               go to state 76
    fully_specified_type             go to state 77
    type_qualifier                   go to state 78
    varying_modifier                 go to state 79
    type_specifier                   go to state 80
    type_specifier_nonarray          go to state 81
    struct_specifier                 go to state 82
    translation_unit                 go to state 83
    external_declaration             go to state 84
    function_definition              go to state 85


State 1

  126 type_qualifier: ATTRIBUTE .

    $default  reduce using rule 126 (type_qualifier)


State 2

  125 type_qualifier: CONST_QUAL .

    $default  reduce using rule 125 (type_qualifier)


State 3

  144 type_specifier_nonarray: BOOL_TYPE .

    $default  reduce using rule 144 (type_specifier_nonarray)


State 4

  142 type_specifier_nonarray: FLOAT_TYPE .

    $default  reduce using rule 142 (type_specifier_nonarray)


State 5

  143 type_specifier_nonarray: INT_TYPE .

    $default  reduce using rule 143 (type_specifier_nonarray)


State 6

  119 single_declaration: INVARIANT . IDENTIFIER
  130 varying_modifier: INVARIANT .

    IDENTIFIER  shift, and go to state 86

    $default  reduce using rule 130 (varying_modifier)


State 7

  149 type_specifier_nonarray: BVEC2 .

    $default  reduce using rule 149 (type_specifier_nonarray)


State 8

  150 type_specifier_nonarray: BVEC3 .

    $default  reduce using rule 150 (type_specifier_nonarray)


State 9

  151 type_specifier_nonarray: BVEC4 .

    $default  reduce using rule 151 (type_specifier_nonarray)


State 10

  152 type_specifier_nonarray: IVEC2 .

    $default  reduce using rule 152 (type_specifier_nonarray)


State 11

  153 type_specifier_nonarray: IVEC3 .

    $default  reduce using rule 153 (type_specifier_nonarray)


State 12

  154 type_specifier_nonarray: IVEC4 .

    $default  reduce using rule 154 (type_specifier_nonarray)


State 13

  146 type_specifier_nonarray: VEC2 .

    $default  reduce using rule 146 (type_specifier_nonarray)


State 14

  147 type_specifier_nonarray: VEC3 .

    $default  reduce using rule 147 (type_specifier_nonarray)


State 15

  148 type_specifier_nonarray: VEC4 .

    $default  reduce using rule 148 (type_specifier_nonarray)


State 16

  158 type_specifier_nonarray: MATRIX2 .

    $default  reduce using rule 158 (type_specifier_nonarray)


State 17

  159 type_specifier_nonarray: MATRIX3 .

    $default  reduce using rule 159 (type_specifier_nonarray)


State 18

  160 type_specifier_nonarray: MATRIX4 .

    $default  reduce using rule 160 (type_specifier_nonarray)


State 19

  161 type_specifier_nonarray: MATRIX2X2 .

    $default  reduce using rule 161 (type_specifier_nonarray)


State 20

  164 type_specifier_nonarray: MATRIX3X2 .

    $default  reduce using rule 164 (type_specifier_nonarray)


State 21

  167 type_specifier_nonarray: MATRIX4X2 .

    $default  reduce using rule 167 (type_specifier_nonarray)


State 22

  162 type_specifier_nonarray: MATRIX2X3 .

    $default  reduce using rule 162 (type_specifier_nonarray)


State 23

  165 type_specifier_nonarray: MATRIX3X3 .

    $default  reduce using rule 165 (type_specifier_nonarray)


State 24

  168 type_specifier_nonarray: MATRIX4X3 .

    $default  reduce using rule 168 (type_specifier_nonarray)


State 25

  163 type_specifier_nonarray: MATRIX2X4 .

    $default  reduce using rule 163 (type_specifier_nonarray)


State 26

  166 type_specifier_nonarray: MATRIX3X4 .

    $default  reduce using rule 166 (type_specifier_nonarray)


State 27

  169 type_specifier_nonarray: MATRIX4X4 .

    $default  reduce using rule 169 (type_specifier_nonarray)


State 28

  129 type_qualifier: UNIFORM .

    $default  reduce using rule 129 (type_qualifier)


State 29

  128 type_qualifier: VARYING .

    $default  reduce using rule 128 (type_qualifier)


State 30

  202 struct_specifier: STRUCT . IDENTIFIER LEFT_BRACE struct_declaration_list RIGHT_BRACE
  203                 | STRUCT . LEFT_BRACE struct_declaration_list RIGHT_BRACE

    IDENTIFIER  shift, and go to state 87
    LEFT_BRACE  shift, and go to state 88


State 31

  141 type_specifier_nonarray: VOID_TYPE .

    $default  reduce using rule 141 (type_specifier_nonarray)


State 32

  170 type_specifier_nonarray: SAMPLER1D .

    $default  reduce using rule 170 (type_specifier_nonarray)


State 33

  173 type_specifier_nonarray: SAMPLER2D .

    $default  reduce using rule 173 (type_specifier_nonarray)


State 34

  176 type_specifier_nonarray: SAMPLER3D .

    $default  reduce using rule 176 (type_specifier_nonarray)


State 35

  179 type_specifier_nonarray: SAMPLERCUBE .

    $default  reduce using rule 179 (type_specifier_nonarray)


State 36

  182 type_specifier_nonarray: SAMPLER1DSHADOW .

    $default  reduce using rule 182 (type_specifier_nonarray)


State 37

  183 type_specifier_nonarray: SAMPLER2DSHADOW .

    $default  reduce using rule 183 (type_specifier_nonarray)


State 38

  184 type_specifier_nonarray: SAMPLER2DRECTARB .

    $default  reduce using rule 184 (type_specifier_nonarray)


State 39

  187 type_specifier_nonarray: SAMPLER2DRECTSHADOWARB .

    $default  reduce using rule 187 (type_specifier_nonarray)


State 40

  201 type_specifier_nonarray: TYPE_NAME .

    $default  reduce using rule 201 (type_specifier_nonarray)


State 41

  145 type_specifier_nonarray: UNSIGNED . INT_TYPE

    INT_TYPE  shift, and go to state 89


State 42

  133 varying_modifier: NOPERSPECTIVE .

    $default  reduce using rule 133 (varying_modifier)


State 43

  132 varying_modifier: FLAT .

    $default  reduce using rule 132 (varying_modifier)


State 44

  131 varying_modifier: CENTROID .

    $default  reduce using rule 131 (varying_modifier)


State 45

  155 type_specifier_nonarray: UVEC2 .

    $default  reduce using rule 155 (type_specifier_nonarray)


State 46

  156 type_specifier_nonarray: UVEC3 .

    $default  reduce using rule 156 (type_specifier_nonarray)


State 47

  157 type_specifier_nonarray: UVEC4 .

    $default  reduce using rule 157 (type_specifier_nonarray)


State 48

  188 type_specifier_nonarray: SAMPLER1DARRAY .

    $default  reduce using rule 188 (type_specifier_nonarray)


State 49

  191 type_specifier_nonarray: SAMPLER2DARRAY .

    $default  reduce using rule 191 (type_specifier_nonarray)


State 50

  197 type_specifier_nonarray: SAMPLER1DARRAYSHADOW .

    $default  reduce using rule 197 (type_specifier_nonarray)


State 51

  198 type_specifier_nonarray: SAMPLER2DARRAYSHADOW .

    $default  reduce using rule 198 (type_specifier_nonarray)


State 52

  199 type_specifier_nonarray: SAMPLERCUBESHADOW .

    $default  reduce using rule 199 (type_specifier_nonarray)


State 53

  171 type_specifier_nonarray: ISAMPLER1D .

    $default  reduce using rule 171 (type_specifier_nonarray)


State 54

  174 type_specifier_nonarray: ISAMPLER2D .

    $default  reduce using rule 174 (type_specifier_nonarray)


State 55

  177 type_specifier_nonarray: ISAMPLER3D .

    $default  reduce using rule 177 (type_specifier_nonarray)


State 56

  180 type_specifier_nonarray: ISAMPLERCUBE .

    $default  reduce using rule 180 (type_specifier_nonarray)


State 57

  185 type_specifier_nonarray: ISAMPLER2DRECT .

    $default  reduce using rule 185 (type_specifier_nonarray)


State 58
